--- a/E-ticaret(İleri_Seviye)/Views/Home/Index.cshtml
+++ b/E-ticaret(İleri_Seviye)/Views/Home/Index.cshtml
@@ -23,6 +23,12 @@
             @Html.Action("Categories" , "Home")
 
             <a class="text-danger bg-dark" href="/ShoppingCart/Index">Go-to-Cart</a>
+
+
+
+            <a class="text-danger bg-dark" href="/ShoppingCart/Index">Go-to-Cart</a>
+            <a class="text-danger bg-dark" href="/ShoppingCart/Index">Go-to-Cart</a>
+            <a class="text-danger bg-dark" href="/ShoppingCart/Index">Go-to-Cart</a>
         </div>
         <div class="col-md-9 card-group">
             @Html.Partial("CourseList" , Model)
