--- a/E-ticaret(İleri_Seviye)/Views/Account/Login.cshtml
+++ b/E-ticaret(İleri_Seviye)/Views/Account/Login.cshtml
@@ -34,7 +34,8 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
+                <button class="btn btn-primary" type="submit">Login</button>
+             @*   @Html.ActionLink("Log In","Login","Account",new { returnUrl = Request.RawUrl},new { @class="btn btn-primary"})*@
             </div>
         </div>
     </div>
