--- a/E-ticaret(İleri_Seviye)/Views/Shared/_LoginPartial.cshtml
+++ b/E-ticaret(İleri_Seviye)/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
         {
 
             <li class="nav-item active">
-                <a class="nav-link" href="/">@User.Identity.Name</a>
+                <a class="nav-link" href="/Account/MyProfile">@User.Identity.Name</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/Account/Logout">Log Out</a>
